# P175873

./: README.md  readme.txt
config/: DoxyGenConfigFile
doc/: README.md
doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_cpu_info-members.html  class_cpu_info.html  class_cpu_info.js  class_cpu_info_data-members.html  class_cpu_info_data.html  class_cpu_info_data.js  class_cpu_info_data__coll__graph.map  class_cpu_info_data__inherit__graph.md5  class_cpu_info_data_ad9c4d59f87d5778221933f48fd55cf57_cgraph.map  class_cpu_info_data_ad9c4d59f87d5778221933f48fd55cf57_cgraph.md5  class_cpu_info_model-members.html  class_cpu_info_model.html  class_cpu_info_model.js  class_cpu_info_model__inherit__graph.map  class_cpu_info_model__inherit__graph.md5  class_cpu_info_model_a0082d519e98a02d1eb9cee843ce5039f_cgraph.map  class_cpu_info_model_a0082d519e98a02d1eb9cee843ce5039f_cgraph.md5  class_cpu_info_model_af2dd737582de3c4d422b0cdd3593fd76_cgraph.map  class_cpu_info_model_af2dd737582de3c4d422b0cdd3593fd76_cgraph.md5  classes.html  classspeed_data-members.html  classspeed_data.html  classspeed_data.js  classspeed_data__coll__graph.map  classspeed_data__coll__graph.md5  classspeed_data__inherit__graph.map  classspeed_data__inherit__graph.md5  classwatch_thread-members.html  classwatch_thread.html  classwatch_thread.js  classwatch_thread__inherit__graph.map  classwatch_thread__inherit__graph.md5  classwatch_thread_a08db2711986ea4a10a7b109803559ac3_cgraph.map  classwatch_thread_a08db2711986ea4a10a7b109803559ac3_cgraph.md5  cpuinfo_8cpp.html  cpuinfo_8cpp__incl.map  cpuinfo_8cpp__incl.md5  (+75 more)
doc/html/search/: all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_3.js  functions_0.js  functions_1.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
src/: CMakeLists.txt  cpuinfo.cpp  cpuinfo.h  cpuinfodata.cpp  cpuinfodata.h  cpuinfomodel.cpp  cpuinfomodel.h  main.cpp  main.qml  qml.qrc  speedData.cpp  speedData.h  speedo.qml
test/: readme.txt
test/SWE4/: CMakeLists.txt  readme.txt  testcpuinfo.cpp
